--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On # Turn on the rewriting engine
 RewriteRule ^mahasiswa/?$ mahasiswa.php [NC,L]
+RewriteRule ^properti/?$ properti.php [NC,L]
 RewriteRule ^mahasiswa/([0-9]+)/?$ mahasiswa.php?id=$1 [NC,L]
