--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,8 @@ RewriteRule ^loginadmin/?$ loginadmin.php [NC,L]
 RewriteRule ^getransaksi/?$ getransaksi.php [NC,L]
 RewriteRule ^createtransaksi/?$ createtransaksi.php [NC,L]
 RewriteRule ^lapanganfutsal/?$ lapanganfutsal.php [NC,L]
+RewriteRule ^daftaruser/?$ daftaruser.php [NC,L]
+RewriteRule ^loginuser/?$ loginuser.php [NC,L]
 RewriteRule ^mahasiswa/([0-9]+)/?$ mahasiswa.php?id=$1 [NC,L]
 RewriteRule ^getransaksi/([0-9]+)/?$ getransaksi.php?id=$1 [NC,L]
 RewriteRule ^updatetransaksi/([0-9]+)/?$ updatetransaksi.php?id=$1 [NC,L]
