--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,9 @@ RewriteRule ^createtransaksi/?$ createtransaksi.php [NC,L]
 RewriteRule ^lapanganfutsal/?$ lapanganfutsal.php [NC,L]
 RewriteRule ^daftaruser/?$ daftaruser.php [NC,L]
 RewriteRule ^loginuser/?$ loginuser.php [NC,L]
+RewriteRule ^cekuser/?$ cekuser.php [NC,L]
+RewriteRule ^deltrxadmin/([0-9]+)/?$ deltrxadmin.php?id=$1 [NC,L]
 RewriteRule ^mahasiswa/([0-9]+)/?$ mahasiswa.php?id=$1 [NC,L]
 RewriteRule ^getransaksi/([0-9]+)/?$ getransaksi.php?id=$1 [NC,L]
+RewriteRule ^transaksiuser/([0-9]+)/?$ transaksiuser.php?id=$1 [NC,L]
 RewriteRule ^updatetransaksi/([0-9]+)/?$ updatetransaksi.php?id=$1 [NC,L]
