--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,7 @@ RewriteRule ^daftaruser/?$ daftaruser.php [NC,L]
 RewriteRule ^loginuser/?$ loginuser.php [NC,L]
 RewriteRule ^cekuser/?$ cekuser.php [NC,L]
 RewriteRule ^cekuseradmin/?$ cekuseradmin.php [NC,L]
+RewriteRule ^getjamuser/?$ getjamuser.php [NC,L]
 RewriteRule ^tambahfasilitas/?$ tambahfasilitas.php [NC,L]
 RewriteRule ^deltrxadmin/([0-9]+)/?$ deltrxadmin.php?id=$1 [NC,L]
 RewriteRule ^mahasiswa/([0-9]+)/?$ mahasiswa.php?id=$1 [NC,L]
@@ -17,5 +18,5 @@ RewriteRule ^transaksiuser/([0-9]+)/?$ transaksiuser.php?id=$1 [NC,L]
 RewriteRule ^getfasilitasuser/([0-9]+)/?$ getfasilitasuser.php?id=$1 [NC,L]
 RewriteRule ^updatetransaksi/([0-9]+)/?$ updatetransaksi.php?id=$1 [NC,L]
 RewriteRule ^updatefotolap/([0-9]+)/?$ updatefotolap.php?id=$1 [NC,L]
-
+RewriteRule ^uploadbukti/([0-9]+)/?$ uploadbukti.php?id=$1 [NC,L]
 RewriteRule ^getjadwaluser/([0-9]+)/?$ getjadwaluser.php?id=$1 [NC,L]
