--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,9 @@ RewriteRule ^mahasiswa/([0-9]+)/?$ mahasiswa.php?id=$1 [NC,L]
 RewriteRule ^getransaksi/([0-9]+)/?$ getransaksi.php?id=$1 [NC,L]
 RewriteRule ^transaksiuser/([0-9]+)/?$ transaksiuser.php?id=$1 [NC,L]
 RewriteRule ^getfasilitasuser/([0-9]+)/?$ getfasilitasuser.php?id=$1 [NC,L]
+RewriteRule ^gethariuser/([0-9]+)/?$ gethariuser.php?id=$1 [NC,L]
+RewriteRule ^edithari/([0-9]+)/?$ edithari.php?id=$1 [NC,L]
+RewriteRule ^updatestatusjam/([0-9]+)/?$ updatestatusjam.php?id=$1 [NC,L]
 RewriteRule ^updatetransaksi/([0-9]+)/?$ updatetransaksi.php?id=$1 [NC,L]
 RewriteRule ^updatefotolap/([0-9]+)/?$ updatefotolap.php?id=$1 [NC,L]
 RewriteRule ^uploadbukti/([0-9]+)/?$ uploadbukti.php?id=$1 [NC,L]
